first working version

--- a/project1/encyclopedia/templates/encyclopedia/entry.html
+++ b/project1/encyclopedia/templates/encyclopedia/entry.html
@@ -4,6 +4,12 @@
     {{ title }}
 {% endblock %}
 
+{% block nav %}
+    <div>
+        <a href="{{ request.path }}/edit">Edit Page</a>
+    </div>
+{% endblock %}
+
 {% block body %}
     {{ contents|safe }}
 {% endblock %}
